@@ -11,7 +11,6 @@ authority        = cpan:PERIGRIN
 github_user      = jhannah
 install_command  = cpanm .
 no_AutoPrereq    = 1
-use_MakeMaker    = 0
 
 [AutoPrereqs]
 skip = ^ManagerRole$
@@ -19,5 +18,3 @@ skip = ^Win32::
 
 [MetaNoIndex]
 dir = doc
-
-[=inc::MooseXWorkersMaker / MooseXWorkersMaker]
