@@ -2,6 +2,8 @@ Revision history for MooseX-Workers
    Full history: https://github.com/jhannah/moosex-workers
 
 {{$NEXT}}
+  - don't quote external prog/args on Win32 (broke in cmd)
+  - skip 10.worker.enqueue.t on Win32 (fails sometimes, cannot reproduce)
 
 0.21 2013-04-29 01:36:27
   - much better compatibility with Win32
